adding in deployment code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,4 +36,10 @@ jobs:
       # run tests!
       - run: npm run test
 
+  deployment:
+    staging:
+      branch: master
+      heroku:
+        appname: narwhal-user-microservice
+
 
