changing deployment code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,10 +36,11 @@ jobs:
       # run tests!
       - run: npm run test
 
-  deployment:
-    staging:
-      branch: master
-      heroku:
-        appname: narwhal-user-microservice
+      # deploy the app
+      - deployment:
+          staging:
+            branch: master
+            heroku:
+              appname: narwhal-user-microservice
 
 
