changing deployment code

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,10 +37,23 @@ jobs:
       - run: npm run test
 
       # deploy the app
-      - deployment:
-          staging:
-            branch: master
-            heroku:
-              appname: narwhal-user-microservice
+      - run:
+        name: Deploy Master to Heroku
+        command: |  # this command is framework-dependent and may vary
+          heroku git:remote -a HEROKU_APP_NAME
+          git push --force https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git HEAD:refs/heads/master
+          sleep 5  # sleep for 5 seconds to wait for dynos
+          heroku restart
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build-job
+      - deploy-jobs:  # only deploy when master successfully builds
+          requires:
+            - build-job
+          filters:
+            branches:
+              only: master
 
 
