--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
+    "enzyme": "^3.3.0",
     "express": "^4.16.2",
+    "jest": "^22.4.3",
     "jsonwebtoken": "^8.2.0",
     "pg-promise": "^8.2.1"
   },
